--- a/backend/package.json
+++ b/backend/package.json
@@ -4,20 +4,24 @@
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc",
+    "dev": "tsx watch src/index.ts",
+    "dev:once": "tsx src/index.ts",
+    "build": "node --max-old-space-size=8192 ./node_modules/typescript/bin/tsc --skipLibCheck",
     "start": "node dist/index.js",
     "lint": "eslint src --ext .ts",
     "test": "vitest run",
     "test:watch": "vitest",
-    "predev": "npm run test"
+    "mcp:start": "node dist/mcp-server/index.js",
+    "mcp:dev": "tsx watch src/mcp-server/index.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
+    "@modelcontextprotocol/sdk": "^1.6.1",
     "bullmq": "^5.4.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.0",
+    "node-edge-tts": "^1.2.9",
     "express": "^4.18.3",
     "fluent-ffmpeg": "^2.1.3",
     "global-agent": "^3.0.0",
@@ -49,6 +53,7 @@
     "eslint": "^8.57.0",
     "supertest": "^7.2.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.4.0",
     "vitest": "^4.0.18"
   }
